kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: qr-survey
spec:
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
